crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@make__failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/failing-exercise
---
- failing-exercise
- failing-exercise/src
- failing-exercise/src/Makefile
- failing-exercise/src/main
- failing-exercise/src/main.c
- failing-exercise/src/source.c
- failing-exercise/src/source.h

