crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@make__passing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/passing-exercise
---
- passing-exercise
- passing-exercise/src
- passing-exercise/src/Makefile
- passing-exercise/src/main
- passing-exercise/src/main.c
- passing-exercise/src/source.c
- passing-exercise/src/source.h

