crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@make__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/passing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 7b5f432a372380e755df8c3204f8f1330a93ceeb662817c5ef33fbe1550a49a3
