crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@make__valgrind-failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/valgrind-failing-exercise
---
- valgrind-failing-exercise
- valgrind-failing-exercise/src
- valgrind-failing-exercise/src/main.c
- valgrind-failing-exercise/src/source.c
- valgrind-failing-exercise/src/source.h
